--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,7 +1,7 @@
 TEAM_ID=
 
 PRODUCT_NAME=TalangragaUmrohMobile
-PRODUCT_BUNDLE_IDENTIFIER=com.talangraga.umrohmobile.TalangragaUmrohMobile$(TEAM_ID)
+PRODUCT_BUNDLE_IDENTIFIER=com.talangraga.talangragaumrohmobile.TalangragaUmrohMobile$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
