--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+ksp.useKSP2=true
 
 buildType=debug
 stagingUrl=http://192.168.101.8:1337/api/
