--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.12.1"
+agp = "8.13.0"
 android-compileSdk = "36"
 android-minSdk = "26"
 android-targetSdk = "35"
@@ -17,6 +17,7 @@ kotlin = "2.2.10"
 koin = "4.1.0"
 kotlinx-serialization = "1.9.0"
 buildConfig = "5.6.7"
+kotlinxDatetime = "0.7.1"
 ktor = "3.2.3"
 ktorMonitorLogging = "1.7.3"
 materialIconsExtended = "1.7.3"
@@ -54,6 +55,7 @@ koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
 
 # Kotlinx Serialization
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 
 # Ktor
