--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,34 +3,33 @@ agp = "8.13.0"
 android-compileSdk = "36"
 android-minSdk = "26"
 android-targetSdk = "35"
-androidx-activity = "1.10.1"
+androidx-activity = "1.11.0"
 androidx-appcompat = "1.7.1"
 androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
 androidx-lifecycle = "2.9.1"
 androidx-testExt = "1.3.0"
 coilCompose = "3.3.0"
-composeMultiplatform = "1.8.2"
+composeMultiplatform = "1.9.0"
 constraintlayoutComposeMultiplatform = "0.6.0"
 inspektifyKtor3 = "1.0.0-beta09"
 junit = "4.13.2"
 kotlin = "2.2.20"
 koin = "4.1.0"
 kotlinx-serialization = "1.9.0"
-buildConfig = "5.6.7"
 kotlinxDatetime = "0.7.1-0.6.x-compat"
 ktor = "3.2.3"
 ktorMonitorLogging = "1.7.3"
 materialIconsExtended = "1.7.3"
-navigationCompose = "2.9.0-beta03"
+navigationCompose = "2.9.0"
 datastore = "1.1.7"
 
 kotlinx-coroutines = "1.9.0"
 ksp = "2.2.10-2.0.2"
-room = "2.8.0"
-sqlite = "2.6.0"
-kotlinParcelize = "2.2.20-RC"
-symbolProcessingApi = "2.2.0-2.0.2"
+room = "2.8.1"
+sqlite = "2.6.1"
+kotlinParcelize = "2.2.20"
+symbolProcessingApi = "2.2.10-2.0.2"
 buildKonfig = "0.17.1"
 napier = "2.7.1"
 
@@ -93,7 +92,6 @@ composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "composeMul
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-#buildConfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildConfig" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 androidx-room = { id = "androidx.room", version.ref = "room" }
 kotlinParcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlinParcelize" }
