--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,33 +7,32 @@ androidx-activity = "1.11.0"
 androidx-appcompat = "1.7.1"
 androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
-androidx-lifecycle = "2.9.4"
+androidx-lifecycle = "2.9.5"
 androidx-testExt = "1.3.0"
 coilCompose = "3.3.0"
-composeMultiplatform = "1.9.0"
+composeMultiplatform = "1.9.1"
 constraintlayoutComposeMultiplatform = "0.6.1"
 inspektifyKtor3 = "1.0.0-beta09"
 junit = "4.13.2"
-kotlin = "2.2.20"
+kotlin = "2.2.21"
 koin = "4.1.1"
+kotzilla = "1.2.3"
 kotlinx-serialization = "1.9.0"
 kotlinxDatetime = "0.7.1-0.6.x-compat"
 ktor = "3.3.1"
 ktorMonitorLogging = "1.7.5"
 materialIconsExtended = "1.7.3"
-navigationCompose = "2.9.0"
-datastore = "1.1.7"
+navigationCompose = "2.9.1"
 
 kotlinx-coroutines = "1.10.2"
-kotlinParcelize = "2.2.20"
+kotlinParcelize = "2.2.21"
 buildKonfig = "0.17.1"
 napier = "2.7.1"
 kotlinStdlib = "2.2.20"
 runner = "1.7.0"
 core = "1.7.0"
 sqlDelight = "2.1.0"
-
-kotzilla = "1.2.3"
+settings = "1.3.0"
 
 [libraries]
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
@@ -49,7 +48,6 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-lifecycle-viewmodelCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
-androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
 
 # Koin
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
@@ -87,10 +85,8 @@ android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = 
 native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelight" }
 runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelight" }
 coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
-
-kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinStdlib" }
-androidx-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
-androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
+multiplatform-settings = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "settings"}
+multiplatform-settings-serialization = { module = "com.russhwolf:multiplatform-settings-serialization", version.ref = "settings"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
