--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,11 @@ kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx4096M
 
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\\="-Xmx4096M"
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 
 #Android
-
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 ksp.useKSP2=true
