--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,16 @@ kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx4096M
 
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 
 #Android
-
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 ksp.useKSP2=true
 
 buildkonfig.flavor=staging
 buildType=debug
-stagingUrl=http://192.168.101.2:8000/
+stagingUrl=http://192.168.148.63:8000/
 productionUrl=https://talangraga.com/
