--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.12.0"
+agp = "8.13.1"
 android-compileSdk = "36"
 android-minSdk = "26"
 android-targetSdk = "35"
@@ -10,16 +10,16 @@ androidx-espresso = "3.7.0"
 androidx-lifecycle = "2.9.5"
 androidx-testExt = "1.3.0"
 coilCompose = "3.3.0"
-composeMultiplatform = "1.9.1"
+composeMultiplatform = "1.9.2"
 constraintlayoutComposeMultiplatform = "0.6.1"
 inspektifyKtor3 = "1.0.0-beta09"
 junit = "4.13.2"
 kotlin = "2.2.21"
 koin = "4.1.1"
-kotzilla = "1.2.3"
+kotzilla = "1.3.0"
 kotlinx-serialization = "1.9.0"
 kotlinxDatetime = "0.7.1-0.6.x-compat"
-ktor = "3.3.1"
+ktor = "3.3.2"
 ktorMonitorLogging = "1.7.5"
 materialIconsExtended = "1.7.3"
 navigationCompose = "2.9.1"
@@ -87,6 +87,7 @@ runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelight" }
 coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
 multiplatform-settings = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "settings"}
 multiplatform-settings-serialization = { module = "com.russhwolf:multiplatform-settings-serialization", version.ref = "settings"}
+multiplatform-settings-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "settings"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
