feature(firebase): Integrate Firebase
Signed-off-by: iqbalwork <work.iqbalfauzi@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,9 @@ ksp.useKSP2=true
 
 buildkonfig.flavor=staging
 buildType=debug
-stagingUrl=http://192.168.101.2:8000/
+stagingUrl=http://192.168.101.7:8000/
 productionUrl=https://talangraga.com/
+
+# Kotzilla
+kotzillaStagingKey=ktz-sdk-DZMH3UFugdk5m6UV2gMBr876g8uoFkhPBFb1A28lojM
+kotzillaProductionKey=ktz-sdk-nO-XzT4ULQfLeuf4f3PYTCRGtGYmJHtvP3_D4S_v078
