--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,7 +35,7 @@ sqlDelight = "2.2.1"
 settings = "1.3.0"
 # Firebase
 gitlive = "2.4.0"
-
+crashlytics = "3.0.6"
 google = "4.4.4"
 
 [libraries]
@@ -112,3 +112,4 @@ android-lint = { id = "com.android.lint", version.ref = "agp" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
 kotzilla = { id = "io.kotzilla.kotzilla-plugin", version.ref = "kotzilla" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google" }
+crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics"}
