feature(editprofile): Create EditProfileScreen.kt
Signed-off-by: iqbalwork <work.iqbalfauzi@gmail.com>

--- a/secret.properties
+++ b/secret.properties
@@ -1,6 +1,6 @@
 # URL
-stagingUrl=http://192.168.101.6:8000/
-productionUrl=https://talangraga.com/
+stagingUrl=http://192.168.101.5:8000/
+productionUrl=https://talangraga-umroh-fastapi-staging.up.railway.app/
 
 # Kotzilla
 kotzillaStagingKey=ktz-sdk-DZMH3UFugdk5m6UV2gMBr876g8uoFkhPBFb1A28lojM
