--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,8 @@ ktor = "3.3.2"
 ktorMonitorLogging = "1.7.5"
 materialIconsExtended = "1.7.3"
 navigationCompose = "2.9.1"
+easyMediaPicker = "2.2.0"
+imagePickerKMP = "1.0.28"
 
 kotlinx-coroutines = "1.10.2"
 kotlinParcelize = "2.2.21"
@@ -42,7 +44,10 @@ assertk = "0.28.1"
 turbine = "1.2.0"
 
 [libraries]
+# Coil Image Loader
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
+coil-network-ktor = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coilCompose" }
+
 constraintlayout-compose-multiplatform = { module = "tech.annexflow.compose:constraintlayout-compose-multiplatform", version.ref = "constraintlayoutComposeMultiplatform" }
 inspektify-ktor3 = { module = "io.github.bvantur:inspektify-ktor3", version.ref = "inspektifyKtor3" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -74,6 +79,7 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 # Ktor
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" } # For Android/JVM with OkHttp
+ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "coilCompose" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" } # For iOS
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-monitor-logging = { module = "ro.cosminmihu.ktor:ktor-monitor-logging", version.ref = "ktorMonitorLogging" }
@@ -88,13 +94,14 @@ napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 # UI
 material-icons-extended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
-
+compose-ui-backhandler = { module = "org.jetbrains.compose.ui:ui-backhandler", version.ref = "composeMultiplatform" }
+image-picker-kmp = { module = "io.github.ismoy:imagepickerkmp", version.ref = "imagePickerKMP" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 
 # Firebase Gitlive
 firebase-app = { module = "dev.gitlive:firebase-app", version.ref = "gitlive" }
 firebase-analytic = { module = "dev.gitlive:firebase-analytics", version.ref = "gitlive" }
-firebase-crashlytic = { module = "dev.gitlive:firebase-crashlytics", version.ref = "gitlive"}
+firebase-crashlytic = { module = "dev.gitlive:firebase-crashlytics", version.ref = "gitlive" }
 
 # Database
 android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelight" }
@@ -119,4 +126,4 @@ android-lint = { id = "com.android.lint", version.ref = "agp" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
 kotzilla = { id = "io.kotzilla.kotzilla-plugin", version.ref = "kotzilla" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google" }
-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics"}
+crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics" }
